clean up, extract localization, introduce generic error states

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,3 +1,46 @@
 {
-  "welcomeContinue": "Weiter"
+  "historyTitle": "Verlauf",
+  "historyLabelName": "Name",
+  "historyLabelBmi": "BMI",
+  "historyLabelAge": "Alter",
+  "historyLabelGender": "Geschlecht",
+  "historyLabelDelete": "Löschen",
+  "noEntries": "Noch keine Einträge",
+  "homeTitle": "Body Mass Index",
+  "homeContentTitle": "BMI Rechner",
+  "homeCalculate": "Berechnen",
+  "infoTitle": "Info",
+  "inputTitle": "Berechnen",
+  "inputLabelHeight": "Höhe:",
+  "inputLabelHeightSuffix": " cm",
+  "inputLabelAge": "Alter:",
+  "inputSuffixAge": "Jahre",
+  "inputLabelWeight": "Gewicht",
+  "inputLabelWeightSuffix": "kg",
+  "inputCalculate": "Berechnen",
+  "resultTitle": "Resultat",
+  "resultLabelBmi": "Dein BMI: ",
+  "resultLabelAge": "Alter:",
+  "resultLabelAgeSuffix": " Jahre",
+  "resultLabelHeight": "Höhe:",
+  "resultLabelHeightSuffix": " cm",
+  "resultLabelWeight": "Gewicht:",
+  "resultLabelWeightSuffix": " kg",
+  "resultNamePlaceholder": "Gib dein Namen ein",
+  "resultSave": "Speichern",
+  "drawerHome": "Home",
+  "drawerInfo": "Info",
+  "drawerCalculate": "Berechnen",
+  "drawerHistory": "Verlauf",
+  "customListviewRange": "Bereich",
+  "customListviewDescription": "Beschreibung",
+  "bmiRangeUnderweightIII": "Untergewichtig (Stark)",
+  "bmiRangeUnderweightII": "Untergewichtig (Mittel)",
+  "bmiRangeUnderweightI": "Untergewichtig (Milde)",
+  "bmiRangeNormal": "Normal",
+  "bmiRangeOverweight": "Übergewichtig",
+  "bmiRangeObeseI": "Adipositas (Grad I)",
+  "bmiRangeObeseII": "Adipositas (Grad II)",
+  "bmiRangeObeseIII": "Adipositas (Grad III)",
+  "genericError": "Etwas ist schief gelaufen"
 }
