adding input view test

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -15,7 +15,7 @@
   "inputLabelHeightSuffix": " cm",
   "inputLabelAge": "Alter:",
   "inputSuffixAge": "Jahre",
-  "inputLabelWeight": "Gewicht",
+  "inputLabelWeight": "Gewicht:",
   "inputLabelWeightSuffix": "kg",
   "inputCalculate": "Berechnen",
   "resultTitle": "Resultat",
